--- a/style.css
+++ b/style.css
@@ -3,25 +3,71 @@
   margin: 0;
   box-sizing: border-box;
 }
+header {
+  background-color: aqua;
+  width: 100%;
+  height: 50px;
+  opacity: 50%;
 
-.img {
-  width: 400px;
+  position: fixed;
+}
+main{
+  position: relative;
+}
+.background-wrapper {
+  width: 100%;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: -1;
+  z-index: -2;
 }
-.section {
-  display: grid;
-  gap: 3rem;
-  grid-template-columns: repeat(4, 250px);
-}
-.div {
-  width: 200px;
-  background-color: red;
-  height: 200px;
-}
-.img2 {
+.background-image {
   width: inherit;
-  object-fit: contain;
+
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+.logo-div{
+  width: 100%;
+  display: grid;
+  position: sticky;
+  position: -webkit-sticky; 
+  bottom: 0px;
+  place-items: center;
+  
+}
+.logo-img{
+  width: 200px;
+  z-index: -1;
+  top: 0;
+}
+.categories-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 2fr;
+  width: 100%;
+  background-color: aqua;
+}
+.categories-section2 {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr ;
+  width: 100%;
+  background-color: aqua;
+}
+.categories-section3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 100%;
+  background-color: aqua;
+}
+.categories {
+  width: 100%;
+  height: 300px;
+}
+
+.categories-image {
+  width: inherit;
+  height: inherit;
+}
+span{
+  font-family: catal;
 }
